# docker-cli-tool

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  main.c
lib/: globals.h
lib/commands/generate/: generate_command.c  generate_command.h
lib/commands/help/: help_command.c  help_command.h
lib/commands/template/: template_command.c  template_command.h
lib/files/: file_manager.c  file_manager.h
lib/logic/: create_files.c  create_files.h
lib/templates/: template_manager.c  template_manager.h
lib/utils/: string_util.c  string_util.h
